# FEPyio

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: validation.yml
fepyio/: __init__.py  _base.py  _feb_enum.py  boundary.py  control.py  convert_materials.py  exceptions.py  feb.py  feb_base.py  globals.py  load_data.py  loads.py  material.py  material_types.py  mesh.py  mesh_domains.py  module.py  output.py  tet_mesh.py
fepyio/typing/: __init__.py  listable.py  mesh.py  numpy_types.py
fepyio/utils/: dict_utils.py  listable_utils.py  prune_dict.py  xmltodict_key_converter.py
tests/: test_convert_materials.py  test_feb.py
tests/data/: Model1.feb  Model2.feb  Model3.feb
